@@ -12,6 +12,10 @@ Improvements::
 * don't recommend prawn-gmagick if PNG or JPG is corrupt or incomplete
 * add helper method to determine when to recommend the prawn-gmagick gem
 
+Bug Fixes::
+
+* use prawn-gmagick, if available, to read raster image referenced by SVG (#2223)
+
 == 2.0.6 (2022-05-30) - @mojavelinux
 
 Bug Fixes::
